add responsive for pager buttons
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@815 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5712,3 +5712,10 @@ body {
       z-index: 99999; } }
 .hide {
   display: none; }
+
+@media only screen and (max-width: 1186) {
+  .sequence-label {
+    font-size: 1.5; }
+
+  .btn-pager a {
+    font-size: 1.25em; } }
