--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -1249,7 +1249,14 @@ body {
 	display: none;
 }
 
-
+@media only screen and ( max-width: 1186 )  {
+	
+	.sequence-label { font-size: 1.5; }
+	.btn-pager { 
+		a { font-size: 1.25em; }
+	}
+	
+}
 
 
 
