add responsive for pager buttons
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@816 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5713,7 +5713,7 @@ body {
 .hide {
   display: none; }
 
-@media only screen and (max-width: 1186) {
+@media only screen and (max-width: 1186px) {
   .sequence-label {
     font-size: 1.5; }
 
