--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -1249,7 +1249,7 @@ body {
 	display: none;
 }
 
-@media only screen and ( max-width: 1186 )  {
+@media only screen and ( max-width: 1186px )  {
 	
 	.sequence-label { font-size: 1.5; }
 	.btn-pager { 
