add responsive for pager buttons
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@817 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5719,3 +5719,9 @@ body {
 
   .btn-pager a {
     font-size: 1.25em; } }
+@media only screen and (max-width: 1135px) {
+  .sequence-label {
+    font-size: 1.25; }
+
+  .btn-pager a {
+    font-size: 1.1em; } }
