--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -1257,6 +1257,14 @@ body {
 	}
 	
 }
+@media only screen and ( max-width: 1135px )  {
+	
+	.sequence-label { font-size: 1.25; }
+	.btn-pager { 
+		a { font-size: 1.1em; }
+	}
+	
+}
 
 
 
