add responsive for pager buttons
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@818 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5721,7 +5721,4 @@ body {
     font-size: 1.25em; } }
 @media only screen and (max-width: 1135px) {
   .sequence-label {
-    font-size: 1.25; }
-
-  .btn-pager a {
-    font-size: 1.1em; } }
+    display: block; } }
