add responsive for pager buttons
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@819 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5721,4 +5721,7 @@ body {
     font-size: 1.25em; } }
 @media only screen and (max-width: 1135px) {
   .sequence-label {
-    display: block; } }
+    display: block; }
+
+  .views-field-field-previous-image-group .btn-pager {
+    margin-left: 20px; } }
