--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -1259,7 +1259,11 @@ body {
 }
 @media only screen and ( max-width: 1135px )  {
 	
-	.sequence-label { display: block; }
+	.sequence-label { 
+		display: block; }
+	.views-field-field-previous-image-group {
+		.btn-pager { margin-left: 20px; }
+	}
 	
 }
 
