add responsive for pager buttons
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@820 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5709,7 +5709,10 @@ body {
       top: 0;
       right: 0;
       height: 400px !important;
-      z-index: 99999; } }
+      z-index: 99999; }
+
+  .sequence-label {
+    display: inline-block; } }
 .hide {
   display: none; }
 
