--- a/css/panels.css
+++ b/css/panels.css
@@ -5709,10 +5709,7 @@ body {
       top: 0;
       right: 0;
       height: 400px !important;
-      z-index: 99999; }
-
-  .sequence-label {
-    display: inline-block; } }
+      z-index: 99999; } }
 .hide {
   display: none; }
 
