add styling for additional image field
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@826 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -701,7 +701,8 @@ body {
 		h5.source  + p,
 		h5.measurements + p,
 		h5.repository + p,
-		h5.work-type + p {
+		h5.work-type + p,
+		h5.additional-image + p {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
