--- a/css/panels.css
+++ b/css/panels.css
@@ -5359,7 +5359,7 @@ body {
     .panels-display .panel-description h5.measurements + p,
     .panels-display .panel-description h5.repository + p,
     .panels-display .panel-description h5.work-type + p,
-    .panels-display .panel-description h5.additional-image + p {
+    .panels-display .panel-description h5.additional-image p {
       display: inline-block;
       padding: 6px 8px;
       background-color: #4d4e53;
