--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -702,7 +702,7 @@ body {
 		h5.measurements + p,
 		h5.repository + p,
 		h5.work-type + p,
-		h5.additional-image + p {
+		h5.additional-image p {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
