--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -701,8 +701,7 @@ body {
 		h5.source  + p,
 		h5.measurements + p,
 		h5.repository + p,
-		h5.work-type + p,
-		h5.additional-image p {
+		h5.work-type + p {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
@@ -717,6 +716,27 @@ body {
 			-o-border-radius: 5px;
 			border-radius: 5px;
 		}
+
+		.panels-display {
+			.additional-image-link {
+				p {
+					display: inline-block;
+					padding: 6px 8px;
+					background-color: #4d4e53;
+					color: #fff;
+					text-decoration: none;	
+					margin-left: 20px;
+					margin-right: 20px;
+					clear: both;
+					width: auto;
+					-moz-border-radius: 5px; 
+					-webkit-border-radius: 5px;
+					-o-border-radius: 5px;
+					border-radius: 5px;
+				}
+			}
+			
+		} 
 		
 		/*h5.work-type p.work-type {
 			display: inline-block;
