add styling for additional image field
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@829 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -719,7 +719,7 @@ body {
 
 		.panels-display {
 			.additional-image-link {
-				p {
+				a {
 					display: inline-block;
 					padding: 6px 8px;
 					background-color: #4d4e53;
