--- a/css/panels.css
+++ b/css/panels.css
@@ -5372,7 +5372,7 @@ body {
       -webkit-border-radius: 5px;
       -o-border-radius: 5px;
       border-radius: 5px; }
-    .panels-display .panel-description .panels-display .additional-image-link a {
+    .panels-display .panel-description .panels-display p.additional-image-link {
       display: inline-block;
       padding: 6px 8px;
       background-color: #4d4e53;
