--- a/css/panels.css
+++ b/css/panels.css
@@ -5372,20 +5372,20 @@ body {
       -webkit-border-radius: 5px;
       -o-border-radius: 5px;
       border-radius: 5px; }
-    .panels-display .panel-description .panels-display p.additional-image-link {
-      display: inline-block;
-      padding: 6px 8px;
-      background-color: #4d4e53;
-      color: #fff;
-      text-decoration: none;
-      margin-left: 20px;
-      margin-right: 20px;
-      clear: both;
-      width: auto;
-      -moz-border-radius: 5px;
-      -webkit-border-radius: 5px;
-      -o-border-radius: 5px;
-      border-radius: 5px; }
+  .panels-display p.additional-image-link {
+    display: inline-block;
+    padding: 6px 8px;
+    background-color: #4d4e53;
+    color: #fff;
+    text-decoration: none;
+    margin-left: 20px;
+    margin-right: 20px;
+    clear: both;
+    width: auto;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px; }
   .panels-display nav {
     position: absolute;
     top: 0;
