fix padding on additional image link
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@833 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5372,11 +5372,13 @@ body {
       -webkit-border-radius: 5px;
       -o-border-radius: 5px;
       border-radius: 5px; }
-  .panels-display p.additional-image-link a {
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -o-border-radius: 5px;
-    border-radius: 5px; }
+  .panels-display p.additional-image-link {
+    padding: 0 0 0 20x; }
+    .panels-display p.additional-image-link a {
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -o-border-radius: 5px;
+      border-radius: 5px; }
   .panels-display nav {
     position: absolute;
     top: 0;
