--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -781,6 +781,7 @@ body {
 	}
 
 	p.additional-image-link {
+		padding: 0 0 0 20x;
 		a {
 			-moz-border-radius: 5px; 
 			-webkit-border-radius: 5px;
