fix bottom margin on additional image label
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@834 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -686,7 +686,8 @@ body {
 		h5.source,
 		h5.work-type,
 		h5.repository,
-		h5.measurements
+		h5.measurements,
+		h5.additional-image
 		 {
 			padding-bottom: 0;
 			display: block;
