--- a/css/panels.css
+++ b/css/panels.css
@@ -5348,7 +5348,8 @@ body {
     .panels-display .panel-description h5.source,
     .panels-display .panel-description h5.work-type,
     .panels-display .panel-description h5.repository,
-    .panels-display .panel-description h5.measurements {
+    .panels-display .panel-description h5.measurements,
+    .panels-display .panel-description h5.additional-image {
       padding-bottom: 0;
       display: block;
       font-wight: bold; }
