fix bottom margin on additional image label
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@836 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5374,7 +5374,7 @@ body {
       -o-border-radius: 5px;
       border-radius: 5px; }
     .panels-display .panel-description p.additional-image-link {
-      padding: 0 0 0 20x; }
+      padding: 0 0 0 20px; }
       .panels-display .panel-description p.additional-image-link a {
         -moz-border-radius: 5px;
         -webkit-border-radius: 5px;
