--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -719,7 +719,7 @@ body {
 		}
 
 		p.additional-image-link {
-			padding: 0 0 0 20x;
+			padding: 0 0 0 20px;
 			a {
 				-moz-border-radius: 5px; 
 				-webkit-border-radius: 5px;
