style additional image modal
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@837 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -902,6 +902,17 @@ body {
 .icon-arrow-white-prev {
 	background: url("../images/icon-arrow-white-prev.png") no-repeat; }
 
+/* Additional image modal - Bootstrap overrides */
+
+.addl-img-modal {
+	-webkit-border-radius: 0;
+	-mox-border-radius: 0;
+	border-radius: 0;
+	width: auto;
+}
+
+
+
 /*
 .search-panels {
 	background-position: 0 0;
