style additional image modal
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@838 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5552,8 +5552,7 @@ body {
 .addl-img-modal {
   -webkit-border-radius: 0;
   -mox-border-radius: 0;
-  border-radius: 0;
-  width: auto; }
+  border-radius: 0; }
 
 /*
 .search-panels {
