--- a/css/panels.css
+++ b/css/panels.css
@@ -5554,6 +5554,17 @@ body {
   -mox-border-radius: 0;
   border-radius: 0; }
 
+.close {
+  float: none;
+  text-shadow: 0;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  position: absolute;
+  z-index: 1000;
+  right: 0;
+  padding: 5px;
+  background: #7a9945; }
+
 /*
 .search-panels {
 	background-position: 0 0;
