--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -909,7 +909,17 @@ body {
 	-mox-border-radius: 0;
 	border-radius: 0;
 }
-
+.close {
+	float: none;
+	text-shadow: 0;
+	opacity: 1;
+	filter: alpha(opacity=100);
+	position: absolute;
+	z-index: 1000;
+	right: 0;
+	padding: 5px;
+	background: $green;
+}
 
 
 /*
