--- a/css/panels.css
+++ b/css/panels.css
@@ -5556,14 +5556,16 @@ body {
 
 .close {
   float: none;
-  text-shadow: 0;
+  text-shadow: 0 0 0 black;
   opacity: 1;
   filter: alpha(opacity=100);
   position: absolute;
   z-index: 1000;
   right: 0;
   padding: 5px;
-  background: #7a9945; }
+  background: #7a9945;
+  font-size: 40px;
+  color: white; }
 
 /*
 .search-panels {
