--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -911,7 +911,7 @@ body {
 }
 .close {
 	float: none;
-	text-shadow: 0;
+	text-shadow: 0 0 0 black;
 	opacity: 1;
 	filter: alpha(opacity=100);
 	position: absolute;
@@ -919,6 +919,8 @@ body {
 	right: 0;
 	padding: 5px;
 	background: $green;
+	font-size: 40px;
+	color: $white;
 }
 
 
