style modal close button
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@841 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5567,6 +5567,18 @@ body {
   font-size: 40px;
   color: white; }
 
+.close:hover {
+  text-shadow: 0 0 0 black;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  position: absolute;
+  z-index: 1000;
+  right: 0;
+  padding: 5px;
+  background: #1faac0;
+  font-size: 40px;
+  color: white; }
+
 /*
 .search-panels {
 	background-position: 0 0;
