--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -922,6 +922,18 @@ body {
 	font-size: 40px;
 	color: $white;
 }
+.close:hover {
+	text-shadow: 0 0 0 black;
+	opacity: 1;
+	filter: alpha(opacity=100);
+	position: absolute;
+	z-index: 1000;
+	right: 0;
+	padding: 5px;
+	background: $blue;
+	font-size: 40px;
+	color: $white;
+}
 
 
 /*
