--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -72,8 +72,8 @@ p.caption {
   }
 }
 
-/* Other buttons, such as book purchase*/
-/*------------------------------*/  
+/* Other buttons, such as book purchase */
+/*---------------------------------------*/  
 
 .btn-standard {
   font-size: 1.1em;
@@ -86,3 +86,14 @@ p.caption {
 .btn-standard:hover {
   background-color: $linkHover;
   color: $textColorLight; }
+
+/* Contributors page */
+/*------------------------------*/  
+
+.contributor { clear: both; }
+.contributor-photo { 
+  width: 200px;
+  float: left; }
+.contributor-info {
+  float: right;
+}
