add styles for contributor page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@843 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6338,11 +6338,12 @@ p.caption {
   clear: both; }
 
 .contributor-photo {
-  width: 200px;
-  float: left; }
+  width: 20%;
+  float: left;
+  margin-right: 20px; }
 
 .contributor-info {
-  float: right; }
+  float: left; }
 
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
