--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -92,8 +92,9 @@ p.caption {
 
 .contributor { clear: both; }
 .contributor-photo { 
-  width: 200px;
-  float: left; }
+  width: 20%;
+  float: left;
+  margin-right: 20px; }
 .contributor-info {
-  float: right;
+  float: left;
 }
