--- a/css/content.css
+++ b/css/content.css
@@ -6343,7 +6343,9 @@ p.caption {
   margin-right: 20px; }
 
 .contributor-info {
-  float: left; }
+  float: left;
+  width: 70%;
+  font-size: 1em; }
 
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
