--- a/css/content.css
+++ b/css/content.css
@@ -6344,8 +6344,7 @@ p.caption {
 
 .contributor-info {
   float: left;
-  width: 70%;
-  font-size: 1em; }
+  width: 70%; }
 
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
