add styles for contributor page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@846 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6346,6 +6346,9 @@ p.caption {
   float: left;
   width: 70%; }
 
+.contributor-publications h5 {
+  font-size: 1.4375em; }
+
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
     width: 940px; }
