--- a/css/content.css
+++ b/css/content.css
@@ -6349,6 +6349,9 @@ p.caption {
 .contributor-publications h5 {
   font-size: 1.4375em; }
 
+.main-content .contributor-bio p {
+  font-size: 1.25em; }
+
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
     width: 940px; }
