add styles for contributor page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@848 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6346,8 +6346,10 @@ p.caption {
   float: left;
   width: 70%; }
 
-.contributor-publications h5 {
-  font-size: 1.4375em; }
+.main-content .contributor-publications h5 {
+  font-size: 1.1em; }
+.main-content .contributor-publications li {
+  font-size: 1em; }
 
 .main-content .contributor-bio p {
   font-size: 1.25em; }
