add styles for contributor page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@851 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -104,7 +104,9 @@ p.caption {
     h5 {
       font-size: 1.1em;
     }
-    li { font-size: 1.1em; }
+    li { 
+      font-size: 1.1em;
+      margin-bottom: .5em; }
   }
 }
 .main-content {
