--- a/css/content.css
+++ b/css/content.css
@@ -6349,7 +6349,8 @@ p.caption {
 .main-content .contributor-publications h5 {
   font-size: 1.1em; }
 .main-content .contributor-publications li {
-  font-size: 1.1em; }
+  font-size: 1.1em;
+  margin-bottom: .5em; }
 
 .main-content .contributor-bio p {
   font-size: 1.25em; }
