add styles for contributor page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@852 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -98,6 +98,7 @@ p.caption {
 .contributor-info {
   float: left;
   width: 70%;
+  strong { font-size: 110%; }
 }
 .main-content {
   .contributor-publications {
