add styles for contributor page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@853 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6345,6 +6345,8 @@ p.caption {
 .contributor-info {
   float: left;
   width: 70%; }
+  .contributor-info strong {
+    font-size: 110%; }
 
 .main-content .contributor-publications h5 {
   font-size: 1.1em; }
