add responsive fix for sidebar header
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@854 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6410,7 +6410,10 @@ p.caption {
     width: 90%; }
 
   .media {
-    background-image: none; } }
+    background-image: none; }
+
+  .sidebar h3 {
+    clear: both; } }
 @media (max-width: 480px) {
   .navbar .brand {
     margin-left: -15px; }
