--- a/css/content/_responsive-767px-max.scss
+++ b/css/content/_responsive-767px-max.scss
@@ -28,5 +28,8 @@
 	.container { padding: 0 10px; }
 	.book-cover { width: 90%; }
 	.media { background-image: none; }
+	.sidebar {
+		h3 { clear: both; }
+	}
 }
 
