add responsive fix for sidebar header
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@855 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6361,7 +6361,9 @@ p.caption {
   .navbar .container {
     width: 940px; }
   .navbar .subtitle {
-    font-size: 1em; } }
+    font-size: 1em; }
+  .navbar .logo h1 a {
+    width: 125%; } }
 @media (min-width: 768px) and (max-width: 979px) {
   body {
     font-size: 90%; }
