add responsive fix for logo
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@856 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6372,6 +6372,8 @@ p.caption {
     width: 724px; }
   .navbar .nav li a {
     font-size: 1em; }
+  .navbar .logo h1 a {
+    width: 125%; }
   .navbar .btn-navbar {
     display: none; }
 
