add active class to nav in addition to active-trail so home page active state works
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@862 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5976,7 +5976,9 @@ img.pull-right {
     .navbar .nav li:first-child a {
       border: none; }
     .navbar .nav li.active-trail a,
-    .navbar .nav li.active-trail a:hover {
+    .navbar .nav li.active-trail a:hover,
+    .navbar .nav li.active a,
+    .navbar .nav li.active a:hover {
       color: #a7c03a;
       border-bottom: 4px solid #a7c03a;
       background-color: inherit;
