--- a/css/content.css
+++ b/css/content.css
@@ -6089,19 +6089,19 @@ footer {
   footer .container {
     background: url("../images/hr.png") no-repeat top;
     padding: 30px 0; }
-  footer ul.menu {
+  footer ul.footer-nav {
     list-style: none;
     margin: 0 0 1em; }
-    footer ul.menu li {
+    footer ul.footer-nav li {
       display: inline-block;
       font-size: 1.1875em; }
-      footer ul.menu li .divider {
+      footer ul.footer-nav li .divider {
         padding: 0 5px; }
-    footer ul.menu li.active {
+    footer ul.footer-nav li.active {
       color: #a7c03a; }
-      footer ul.menu li.active a {
+      footer ul.footer-nav li.active a {
         color: #a7c03a; }
-      footer ul.menu li.active .divider {
+      footer ul.footer-nav li.active .divider {
         color: #4d4e53; }
   footer p {
     font-size: 1.125em; }
