--- a/css/content/_layout.scss
+++ b/css/content/_layout.scss
@@ -118,7 +118,7 @@ footer {
 	.container { 
 		background: url("../images/hr.png") no-repeat top;
 		padding: 30px 0; }
-	ul.menu {
+	ul.footer-nav {
 		list-style: none;
 		margin: 0 0 1em;
 		li { 
