format pathway sequence numbers and guide link
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@889 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5548,6 +5548,16 @@ body {
 .icon-arrow-white-prev {
   background: url("../images/icon-arrow-white-prev.png") no-repeat; }
 
+/* Pathway sequence number and guide */
+.sequence-guide {
+  margin: 10px 0 0 20px;
+  font-size: 1.25em; }
+
+.guide a {
+  color: #7a9945; }
+.guide a:hover {
+  color: white; }
+
 /* Additional image modal - Bootstrap overrides */
 .addl-img-modal {
   -webkit-border-radius: 0;
