--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -902,6 +902,17 @@ body {
 .icon-arrow-white-prev {
 	background: url("../images/icon-arrow-white-prev.png") no-repeat; }
 
+/* Pathway sequence number and guide */
+.sequence-guide {
+	margin: 10px 0 0 20px;
+	font-size: 1.25em;
+}
+.guide {
+	a { color: $green; }
+	a:hover { color: white; }
+}
+
+
 /* Additional image modal - Bootstrap overrides */
 
 .addl-img-modal {
