format pathway sequence numbers and guide link
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@890 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5554,9 +5554,10 @@ body {
   font-size: 1.25em; }
 
 .guide a {
-  color: #7a9945; }
+  background: #7a9945; }
 .guide a:hover {
-  color: white; }
+  background: #37c1d6;
+  text-decoration: none; }
 
 /* Additional image modal - Bootstrap overrides */
 .addl-img-modal {
