format pathway sequence numbers and guide link
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@891 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5554,6 +5554,7 @@ body {
   font-size: 1.25em; }
 
 .guide a {
+  color: white;
   background: #7a9945; }
 .guide a:hover {
   background: #37c1d6;
