format mnemosyne themes page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@893 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6367,7 +6367,12 @@ p.caption {
     float: left;
     margin-right: 5px;
     background: #a6a6a8;
-    padding: 4px 8px; }
+    padding: 4px 8px;
+    color: white; }
+    .panel-themes li a {
+      background: #a7c03a; }
+    .panel-themes li a:hover {
+      background: #005580; }
 
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
