format mnemosyne themes page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@894 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -120,13 +120,17 @@ p.caption {
 /*------------------------------*/  
 .panel-themes {
   list-style: none;
-  li {
+  li, a {
     float: left;
     margin-right: 5px;
     background: $grayLight;
     padding: 4px 8px;
     color: white;
-    a { background: $linkPrimary; }
-    a:hover { background: $linkHover; }
+  }
+  a {
+    background: $linkPrimary;
+  }
+  a:hover {
+    background: $LinkHover;
   }
 }
