--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -123,9 +123,9 @@ p.caption {
   li, a {
     float: left;
     margin-right: 5px;
-    background: $grayLight;
-    padding: 4px 8px;
-    color: white;
+    // background: $grayLight;
+    // padding: 4px 8px;
+    // color: white;
   }
   a {
     background: $linkPrimary;
