format mnemosyne themes page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@897 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6367,7 +6367,9 @@ p.caption {
     float: left;
     margin-right: 5px; }
   .panel-themes a {
-    background: #a7c03a; }
+    background: #a7c03a;
+    padding: 4px 8px;
+    color: white; }
   .panel-themes a:hover {
     background: #005580; }
 
