--- a/css/content.css
+++ b/css/content.css
@@ -5859,6 +5859,9 @@ h2 {
   margin: 0;
   color: white; }
 
+h3 {
+  clear: both; }
+
 .main-content p {
   font-size: 1.4375em;
   line-height: 1.4em; }
