--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -29,10 +29,6 @@ h2 {
 	margin: 0;
 	color: $textColorLight; }
 
-h3 {
-	clear: both;
-}
-
 .main-content {
 	p { 
 		font-size: 1.4375em;
@@ -45,6 +41,8 @@ h3 {
 	h3 { 
 		font-size: 1.625em;
 		margin-top: 1.5em;
+		clear: both;
+		font-weight: normal;
 		a,
 		a:hover { color: white; }
 	}
