format themes page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@901 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6369,6 +6369,7 @@ p.caption {
   .panel-themes li {
     float: left;
     margin-right: 5px;
+    margin-bottom: 10px;
     background: #a6a6a8;
     padding: 4px 8px;
     color: white; }
