--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -123,6 +123,7 @@ p.caption {
   li {
     float: left;
     margin-right: 5px;
+    margin-bottom: 10px;
     background: $grayLight;
     padding: 4px 8px;
     color: white;
