add clear to main content p
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@902 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -32,7 +32,8 @@ h2 {
 .main-content {
 	p { 
 		font-size: 1.4375em;
-		line-height: 1.4em; }
+		line-height: 1.4em;
+		clear: both; }
 	li { 
 		font-size: 1.4375em;
 		line-height: 1.2em;
