--- a/css/content.css
+++ b/css/content.css
@@ -5861,7 +5861,8 @@ h2 {
 
 .main-content p {
   font-size: 1.4375em;
-  line-height: 1.4em; }
+  line-height: 1.4em;
+  clear: both; }
 .main-content li {
   font-size: 1.4375em;
   line-height: 1.2em; }
