add clear to main content p
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@905 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6371,7 +6371,7 @@ p.caption {
     float: left;
     margin-right: 5px;
     margin-bottom: 10px;
-    background: #a6a6a8;
+    background: #ccccd0;
     padding: 4px 8px;
     color: white; }
   .panel-themes li.link {
