--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -124,7 +124,7 @@ p.caption {
     float: left;
     margin-right: 5px;
     margin-bottom: 10px;
-    background: $grayLight;
+    background: $grayVeryLight;
     padding: 4px 8px;
     color: white;
   }
