refine themes page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@906 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6371,7 +6371,7 @@ p.caption {
     float: left;
     margin-right: 5px;
     margin-bottom: 10px;
-    background: #ccccd0;
+    background: #c0c0c3;
     padding: 4px 8px;
     color: white; }
   .panel-themes li.link {
@@ -6379,7 +6379,8 @@ p.caption {
   .panel-themes a {
     background: #a7c03a;
     padding: 4px 8px;
-    color: white; }
+    color: white;
+    display: block; }
   .panel-themes a:hover {
     background: #005580; }
 
