--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -135,6 +135,7 @@ p.caption {
     background: $linkPrimary;
     padding: 4px 8px;
     color: white;
+    display: block;
   }
   a:hover {
     background: $linkHover;
