--- a/css/content/_variables.scss
+++ b/css/content/_variables.scss
@@ -8,7 +8,7 @@ $textColorLight: white;
 
 $grayLight: #a6a6a8;
 $grayLighter: #727375;
-$grayVeryLight: #ccccd0;
+$grayVeryLight: #c0c0c3;
 
 $white: #fff;
 
