refine themes page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@907 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6366,7 +6366,10 @@ p.caption {
 /* Panel list on themes page */
 /*------------------------------*/
 .panel-themes {
-  list-style: none; }
+  list-style: none;
+  margin-left: 0;
+  overflow: hidden;
+  border-bottom: 1px solid #dedede; }
   .panel-themes li {
     float: left;
     margin-right: 5px;
