refine themes page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@908 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6369,7 +6369,8 @@ p.caption {
   list-style: none;
   margin-left: 0;
   overflow: hidden;
-  border-bottom: 1px solid #dedede; }
+  border-bottom: 1px solid #dedede;
+  padding-bottom: 5px; }
   .panel-themes li {
     float: left;
     margin-right: 5px;
