--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -123,6 +123,7 @@ p.caption {
   margin-left: 0;
   overflow: hidden;
   border-bottom: 1px solid #dedede;
+  padding-bottom: 5px;
   li {
     float: left;
     margin-right: 5px;
