bug fix for opacity of carousel
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@909 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -916,6 +916,8 @@ body {
 		text-decoration: none; }
 }
 
+/* Bug fix for opacity of carousel */
+.rs-carousel { opacity: 1; }
 
 /* Additional image modal - Bootstrap overrides */
 
