removing clearing from p as this breaks other pages
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@910 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5861,8 +5861,7 @@ h2 {
 
 .main-content p {
   font-size: 1.4375em;
-  line-height: 1.4em;
-  clear: both; }
+  line-height: 1.4em; }
 .main-content li {
   font-size: 1.4375em;
   line-height: 1.2em; }
