--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -32,8 +32,7 @@ h2 {
 .main-content {
 	p { 
 		font-size: 1.4375em;
-		line-height: 1.4em;
-		clear: both; }
+		line-height: 1.4em; }
 	li { 
 		font-size: 1.4375em;
 		line-height: 1.2em;
