--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -702,7 +702,8 @@ body {
 		h5.source  + p,
 		h5.measurements + p,
 		h5.repository + p,
-		h5.work-type + p {
+		h5.work-type + p,
+		.identification {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
