--- a/css/panels.css
+++ b/css/panels.css
@@ -5374,7 +5374,8 @@ body {
       -moz-border-radius: 5px;
       -webkit-border-radius: 5px;
       -o-border-radius: 5px;
-      border-radius: 5px; }
+      border-radius: 5px;
+      margin-bottom: 10px; }
     .panels-display .panel-description p.additional-image-link,
     .panels-display .panel-description p.external-link {
       padding: 0 0 0 20px; }
