--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -718,6 +718,7 @@ body {
 			-webkit-border-radius: 5px;
 			-o-border-radius: 5px;
 			border-radius: 5px;
+			margin-bottom: 10px;
 		}
 
 		p.additional-image-link,
