--- a/css/panels.css
+++ b/css/panels.css
@@ -5384,7 +5384,8 @@ body {
         -moz-border-radius: 5px;
         -webkit-border-radius: 5px;
         -o-border-radius: 5px;
-        border-radius: 5px; }
+        border-radius: 5px;
+        margin-bottom: 5px; }
   .panels-display nav {
     position: absolute;
     top: 0;
