--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -729,6 +729,7 @@ body {
 				-webkit-border-radius: 5px;
 				-o-border-radius: 5px;
 				border-radius: 5px;
+				margin-bottom: 5px;
 			}
 				
 		} 
