--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -704,7 +704,7 @@ body {
 		h5.measurements + p,
 		h5.repository + p,
 		h5.work-type + p,
-		.identification {
+		.identification + p {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
