tweak padding for external links
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@921 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -723,13 +723,13 @@ body {
 
 		p.additional-image-link,
 		p.external-link {
-			padding: 0 0 0 20px;
+			padding: 0 20px;
 			a {
 				-moz-border-radius: 5px; 
 				-webkit-border-radius: 5px;
 				-o-border-radius: 5px;
 				border-radius: 5px;
-				margin-bottom: 5px;
+				margin: 0 5px 5px 0;
 			}
 				
 		} 
