--- a/css/panels.css
+++ b/css/panels.css
@@ -5378,14 +5378,14 @@ body {
       margin-bottom: 10px; }
     .panels-display .panel-description p.additional-image-link,
     .panels-display .panel-description p.external-link {
-      padding: 0 0 0 20px; }
+      padding: 0 20px; }
       .panels-display .panel-description p.additional-image-link a,
       .panels-display .panel-description p.external-link a {
         -moz-border-radius: 5px;
         -webkit-border-radius: 5px;
         -o-border-radius: 5px;
         border-radius: 5px;
-        margin-bottom: 5px; }
+        margin: 0 5px 5px 0; }
   .panels-display nav {
     position: absolute;
     top: 0;
