--- a/css/panels.css
+++ b/css/panels.css
@@ -5376,10 +5376,10 @@ body {
       -o-border-radius: 5px;
       border-radius: 5px;
       margin-bottom: 10px; }
-    .panels-display .panel-description .additional-images,
+    .panels-display .panel-description p.additional-images,
     .panels-display .panel-description p.external-link {
       padding: 0 20px; }
-      .panels-display .panel-description .additional-images a,
+      .panels-display .panel-description p.additional-images a,
       .panels-display .panel-description p.external-link a {
         -moz-border-radius: 5px;
         -webkit-border-radius: 5px;
