--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -721,7 +721,7 @@ body {
 			margin-bottom: 10px;
 		}
 
-		.additional-images,
+		p.additional-images,
 		p.external-link {
 			padding: 0 20px;
 			a {
