--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -721,7 +721,7 @@ body {
 			margin-bottom: 10px;
 		}
 
-		p.additional-images,
+		.additional-images,
 		p.external-link {
 			padding: 0 20px;
 			a {
@@ -730,8 +730,10 @@ body {
 				-o-border-radius: 5px;
 				border-radius: 5px;
 				margin: 0 5px 5px 0;
+				display: inline-block;
+				background: $green;
 			}
-				
+			a:hover { background: $blue; }
 		} 
 		
 		/*h5.work-type p.work-type {
